change admin and customer layout

--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
@@ -12,6 +12,12 @@ color: yellow;
 {
   color: yellow;
 }
+#header {
+	text-align:center;
+	margin-top:70px;
+	color: white;
+	font-style: italic;
+}
 
 /*.navbar-default .navbar-nav>li:hover
 {
