--- a/CafeteriaApp/CafeteriaApp.Frontend/css/favorite items.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/favorite items.css
@@ -15,12 +15,17 @@ h1,h3 {
   font-style: italic;
 }
 
-.row .col-lg-5 table:first-of-type{
+.row .col-lg-5  table{
 
-border : 2px solid orange;
+border : 1px solid blue;
  width : 100%;
 }
 
+.row .col-lg-5 .blueTable tr:hover
+ {
+  background-color: #CECECE
+
+ }
 
 .row .col-lg-5 .blueTable>tr{/*first tr child in table */
 margin: 10px;
@@ -40,6 +45,10 @@ color: white;
 text-decoration: none;
 }
 
+.row .col-lg-5 .addToOrder a:hover{
+
+ background-color: #E7E7E7
+}
 
 .row .col-lg-5 .addToOrder  a {
 color:white;
@@ -47,56 +56,16 @@ float:right;
 margin-top:-40px
 }
 
-.row .col-lg-5 .addToOrder a:hover{
-
- background-color: #444441;
- transition: all .2s;
-
+.bottom a{
+color: white;
 }
-
 
 .about{
   display: none;
 }
-
 .btn-circle {
  border-radius: 50%;
  text-align: center;
  margin-bottom: 50px;
-
-}
-
-
-.row .col-lg-5 .blueTable tr:hover
- {
-  background-color: #444441;
-text-shadow: 0 0 20px #952;
- transition: all .3s;
- }
-
-.row .col-lg-5 .blueTable>tr{/*first tr child in table */
-margin: 10px;
-/*color: white;*/
-}
-
-
-.bottom a{
-color: white;
-cursor: pointer;
-text-decoration: none;
-}
-
-
-hr {
-  margin: 20px;
-  border: none;
-  border-bottom: thin solid rgba(255,255,255,.1);
-}
-
-
-.btn.btn-lg.comments:hover{
-  background-color: #278376;
-    font-size: 20px;
- transition: all .2s;
 
 }
