--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
@@ -1,4 +1,21 @@
+/*Common on most of styles in all pages*/
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
 
+.container{
+
+  margin-top: 70px;
+}
+
+
+
+/************************************************************************************************************/
 /*.navbar-default .navbar-nav>li:hover
 {
 
@@ -29,24 +46,36 @@ nav{
   background-image:  url('/CafeteriaApp.Frontend/images/customer background image4.jpg')
 }
 
+#optionsNavbar.navbar-collapse:not(.collapse)+#right_ul {/*@start*/
+  margin: 10px 0px  0px 0px ;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 50%; 
+}
+
+#optionsNavbar.navbar-collapse.collapse.in+#right_ul,#optionsNavbar.navbar-collapse.collapsing+#right_ul {
+width: 87%;
+}
+
+
 .container-fluid ,.navbar-header{
 padding-left: 10px;
 }
 
 #right_ul {
-
   margin: 10px 0px  0px 0px ;
   position: absolute;
   right: 0px;
   top: 0px;
+width: 87%;
   /*margin-right: 20px;*/
  /* margin-left: 30px;*/
 }
 
 #right_ul li {
-/*width: 100px;*/
-margin-right:50px; 
-  float: right ;
+margin-right:20px; 
+  float: left ;
 }
 
 #right_ul li> a {
@@ -57,30 +86,36 @@ margin-right:50px;
 
 
 #notification{
-margin-right:50px;
-margin-left:50px;
 cursor:pointer;
 width: 55px;
+
+}
+
+#shoppingCart{
+margin-top: -5px;
+cursor:pointer;
+overflow: visible;
+display: block;
+height:50px;
+width: 50px;
+
+}
+
+#languagesDropdown{
+width: 28%;
+display: inline-block;
 }
 
 #myProfile{
 width : 100px;
 height : 70px;
 padding-bottom : 0px;
+  width: 28%;
 }
-
-#shoppingCart{
-margin-right: 50px; 
-  cursor:pointer;
-  width: 50px;
-overflow: visible;
-}
-
 
 #left_ul >li>a{
  color: blue;
 }
-
 
 
 #left_ul>li>a:hover
@@ -123,11 +158,10 @@ transition: all 0.3s;
 
 #shoppingCartDetails {
     display:none;
-    width:350px;
+    width:320px;
     position:absolute;
     top:58px;
-    left:10px;
-   
+    left:-50px;
     background:#E9EA99;
     border:solid 1px rgba(100, 100, 100, .20);
     -webkit-box-shadow:0 3px 8px rgba(0, 0, 0, .20);
@@ -175,7 +209,7 @@ transition: all 0.3s;
    vertical-align: middle;
 }
 
-#orderTable  td{
+#orderTable td{
   border-collapse: collapse;
    border: 1px solid #5F5F5F;
    vertical-align: middle;
@@ -186,13 +220,15 @@ transition: all 0.3s;
 }
 
 #checkout{
-  font-style:italic;
-color:#5F5F5F;
+font-style:italic;
+background-color: #891C88;
+  color: #FFFFFF;
+
 }
 
 #checkout:hover{
-  background-color: #5F5F5F;
-  color: #FFFFFF;
+  background-color: #FFFFFF;
+  color:#891C88;
   font-weight: bold;
 }
 
@@ -200,13 +236,14 @@ div.dropdown-menu{
 
 text-align: center;
 }
+
 a.dropdown_item{
   float: left;
-margin: 0 auto;
+margin:  auto;
   width: 100%;
   text-decoration: none;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 a.dropdown_item:hover{
@@ -214,11 +251,7 @@ color: red;
 background-color: yellow;
 }
 
-.dropdown-divider{
-background-color: black;
-padding: 5px;
 
-}
 
 
 .break{
