--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
@@ -68,13 +68,13 @@ padding-left: 10px;
   position: absolute;
   right: 0px;
   top: 0px;
-width: 87%;
+  width: 87%;
   /*margin-right: 20px;*/
  /* margin-left: 30px;*/
 }
 
 #right_ul li {
-margin-right:20px; 
+margin-left:10px; 
   float: left ;
 }
 
@@ -93,6 +93,7 @@ width: 55px;
 
 #shoppingCart{
 margin-top: -5px;
+margin-right: 50px;
 cursor:pointer;
 overflow: visible;
 display: block;
