--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
@@ -85,11 +85,7 @@ margin-left:10px;
 }
 
 
-#notification{
-cursor:pointer;
-width: 55px;
 
-}
 
 #shoppingCart{
 margin-top: -5px;
@@ -142,10 +138,10 @@ transition: all 0.3s;
 
 
 
-#notification:hover{
+/*#notification:hover{
 transform: rotate(15deg) scale(1.3);
 }
-
+*/
 
 
 #shoppingCart_Button:hover{
