captcha generator and gallary

--- a/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
@@ -10,7 +10,7 @@
         }*/
         @charset "utf-8";
 html{
-    background:#222222;
+    /*background:#222222;*/
     font-family:helvetica, arial, sans-serif;
 }
 .wrapper{
