--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
@@ -63,18 +63,20 @@ width: 87%;
 padding-left: 10px;
 }
 
+
 #right_ul {
   margin: 10px 0px  0px 0px ;
   position: absolute;
   right: 0px;
   top: 0px;
   width: 87%;
+  padding-left: 0px;
   /*margin-right: 20px;*/
  /* margin-left: 30px;*/
 }
 
 #right_ul li {
-margin-left:10px; 
+margin-left:15px; 
   float: left ;
 }
 
@@ -85,11 +87,9 @@ margin-left:10px;
 }
 
 
-
-
 #shoppingCart{
 margin-top: -5px;
-margin-right: 50px;
+margin-right: 25px;
 cursor:pointer;
 overflow: visible;
 display: block;
