--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout_style.css
@@ -14,19 +14,14 @@
 }
 
 
-
 /************************************************************************************************************/
 /*.navbar-default .navbar-nav>li:hover
 {
-
 color: yellow;
-
 }*/
 /*.navbar-brand{
 color:white;
-
 }
-
 table, th , td  {
   border: 1px solid grey;
   border-collapse: collapse;
@@ -39,30 +34,29 @@ table tr:nth-child(even) {
   background-color: #ffffff;
 }
 */
-/* Red , Green , Orange ,Yellow ,Gray ,Blue */
 
 nav{
   height: 57px;
-  background-image:  url('/CafeteriaApp/CafeteriaApp/CafeteriaApp.Frontend/images/customer background image4.jpg')
+  background-image:  url('../images/customer background image4.jpg')
 }
 
-#optionsNavbar.navbar-collapse:not(.collapse)+#right_ul {/*@start*/
+#optionsNavbar.navbar-collapse:not(.collapse) + #right_ul {/*@start*/
   margin: 10px 0px  0px 0px ;
-  position: absolute;
   right: 0px;
   top: 0px;
   width: 50%; 
 }
 
-#optionsNavbar.navbar-collapse.collapse.in+#right_ul,#optionsNavbar.navbar-collapse.collapsing+#right_ul {
+#optionsNavbar.navbar-collapse.collapse.in + #right_ul,#optionsNavbar.navbar-collapse.collapsing + #right_ul {
 width: 87%;
 }
-
+#left_ul li{
+  height: 50px;
+}
 
 .container-fluid ,.navbar-header{
 padding-left: 10px;
 }
-
 
 #right_ul {
   margin: 10px 0px  0px 0px ;
@@ -71,8 +65,6 @@ padding-left: 10px;
   top: 0px;
   width: 87%;
   padding-left: 0px;
-  /*margin-right: 20px;*/
- /* margin-left: 30px;*/
 }
 
 #right_ul li {
@@ -86,6 +78,9 @@ margin-left:15px;
  padding-top: 0px;
 }
 
+.row{
+  margin: 0 !important;
+}
 
 #shoppingCart{
 margin-top: -5px;
@@ -112,16 +107,18 @@ padding-bottom : 0px;
 
 #left_ul >li>a{
  color: blue;
+ transition:0.1s all;
+
 }
+
 
 
 #left_ul>li>a:hover
 {
-  border-radius: 5px;
+border-radius: 5px;
 background-color: #6A8500;
 color: black;
-transform: rotate(-15deg) scale(1.3);
-transition: all 0.3s;
+transform: rotate(-10deg) scale(1.2);
 }
 
 .navbar-default.navbar-nav>li>a:active
@@ -143,13 +140,15 @@ transform: rotate(15deg) scale(1.3);
 }
 */
 
+#shoppingCart_Button{
+  transition: 0.3s; 
+}
 
 #shoppingCart_Button:hover{
 transform: rotate(15deg) ;
 border: 10px solid #E9EA99;
 border-radius: 28px;
 padding: 0px;
-transition: all 0.3s;
 }
 
 
@@ -175,7 +174,7 @@ transition: all 0.3s;
   margin:0;
   padding:10px 0px 10px 0px;
   font-weight:bold;
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 #OrderContents{
