--- a/CafeteriaApp/CafeteriaApp.Frontend/css/stars.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/stars.css
@@ -1,14 +1,14 @@
 
-.row .col-lg-5 div.stars {
+.row .col-md-6 div.stars {
   width: 270px;
   display: inline-block;
 }
 
-.row .col-lg-5 input.star { 
+.row .col-md-6 input.star { 
   display: none;
    }
 
-.row .col-lg-5 label.star {
+.row .col-md-6 label.star {
   float: right;
   padding: 10px;
   font-size: 36px;
@@ -16,27 +16,27 @@
   transition: all .2s;
 }
 
-.row .col-lg-5 input.star:checked ~ label.star:before {
+.row .col-md-6 input.star:checked ~ label.star:before {
   content: '\f005';
   color: #FD4;
   transition: all .25s;
 }
 
-.row .col-lg-5 input.star-5:checked ~ label.star:before {
+.row .col-md-6 input.star-5:checked ~ label.star:before {
   color: #FE7;
   text-shadow: 0 0 20px #952;
 }
 
-.row .col-lg-5 input.star-1:checked ~ label.star:before {
+.row .col-md-6 input.star-1:checked ~ label.star:before {
  color: #F62;
   }
 
-.row .col-lg-5 label.star:hover {
+.row .col-md-6 label.star:hover {
  transform: rotate(-15deg) scale(1.3); 
 cursor: pointer;
 }
 
-.row .col-lg-5 label.star:before {
+.row .col-md-6 label.star:before {
   content: '\f006';
   font-family: FontAwesome;
 }
