limit access for anonymous users

--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout.css
@@ -97,12 +97,12 @@ nav {
     height: 50px;
 }
 #left_ul>li>a {
-    color: blue;
+    color: #5BC0DE;
     transition: 0.1s all;
 }
 #left_ul>li>a:hover {
     border-radius: 5px;
-    background-color: #6A8500;
+    background-color: #5BC0DE;
     color: white;
     /*transform: rotate(-10deg) scale(1.2);*/
 }
