--- a/CafeteriaApp/CafeteriaApp.Frontend/css/customer.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/customer.css
@@ -62,11 +62,14 @@ h1, h3 {
     font-size: 20px;
     transition: all .2s;
 }
-.row .col-md-6 .addToOrder a {
-    float: right;
-    margin-top: -40px
+
+.row .col-md-6 .addToOrder {
+    text-shadow:2px 2px 10px;
+    border:1px solid white;
+    padding:5px;
+    width:auto;height:auto;
 }
-.row .col-md-6 .addToOrder a:hover {
+.row .col-md-6 .addToOrder:hover {
     background-color: orange;
     transition: all .2s;
 }
