--- a/CafeteriaApp/CafeteriaApp.Frontend/css/footer.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/footer.css
@@ -3,8 +3,13 @@
 	    text-align: center;
 	    color: white;
 	    margin-top: 100px;
-	    /*border:5px solid black;*/
+	   border-top: 2px solid #5bc0de;
+	   /*background-image: url(/CafeteriaApp/CafeteriaApp/CafeteriaApp.Frontend/images/logo3.png);*/
+	   background-repeat: no-repeat;
 	    /*height: 300px;*/
+	}
+	.footerLinks ul h4 {
+		color:brown;
 	}
 	.footerLinks ul {
 	    list-style: none;
