--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout.css
@@ -37,7 +37,8 @@ table tr:nth-child(even) {
 
 nav {
     height: 57px;
-    background-image: url('../images/customer background image4.jpg')
+    background-color:brown;!important;
+    /*background-image: url('../images/customer background image4.jpg')*/
 }
 #optionsNavbar.navbar-collapse:not(.collapse)+#right_ul {
     /*@start*/
@@ -115,10 +116,7 @@ nav {
     color: white;
     font-style: italic;
 }
-/*#notification:hover{
-transform: rotate(15deg) scale(1.3);
-}
-*/
+
 .left-to-right {
     border-width: 3px 0 3px 3px;
     border-style: solid;
@@ -235,4 +233,33 @@ a.dropdown_item:hover {
 .dropdown-langs li a{
 display: inline;
 margin-left:10px;
+}
+
+#notify-btn{
+    width: 90px;
+     height: 50px;
+    padding: 0px;
+    background-color:transparent;
+    border-color: transparent;
+    animation: ring;
+    animation-duration:1.5s;
+}
+@keyframes ring{
+0%{
+transform: rotate(50deg) ;
+}
+50%{
+transform: rotate(0deg) ;
+}
+75%{
+    transform: rotate(-50deg) ;
+}
+100%{
+transform: rotate(0deg) ;
+
+}
+}
+
+#notify-btn:hover{
+transform: rotate(15deg) scale(1.3);
 }
