--- a/CafeteriaApp/CafeteriaApp.Frontend/css/footer.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/footer.css
@@ -3,7 +3,8 @@
 	    text-align: center;
 	    color: white;
 	    margin-top: 100px;
-	   border-top: 2px solid #5bc0de;
+	    padding-top:50px;
+	   border-top: 2px solid black;
 	   /*background-image: url(/CafeteriaApp/CafeteriaApp/CafeteriaApp.Frontend/images/logo3.png);*/
 	   background-repeat: no-repeat;
 	    /*height: 300px;*/
