--- a/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
@@ -13,7 +13,8 @@ html{
     /*background:#222222;*/
     font-family:helvetica, arial, sans-serif;
 }
-.wrapper{
+.map-wrapper{
+    display: none;
     width:960px;
     margin: 0 auto;
     position:relative;
