--- a/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
@@ -9,17 +9,18 @@
           padding: 0;
         }*/
         @charset "utf-8";
-html{
+html {
     /*background:#222222;*/
     font-family:helvetica, arial, sans-serif;
 }
-.map-wrapper{
+.map-wrapper {
     display: none;
-    width:960px;
+    /*text-align: center;*/
+    /*width:960px;*/
     margin: 0 auto;
     position:relative;
 }
-#map{
+#map {
     position:relative;
     text-align: center;
     color: #363535;
@@ -33,7 +34,7 @@ html{
     background: #474747;
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, .3);
 }
-#map .helper{
+#map .helper {
     display: block;
     font-weight: bold;
     font-size: 12px;
@@ -43,16 +44,16 @@ html{
     margin: 0 auto;
     margin-top: 140px;
 }
-#map #preloader{
+#preloader {
     position: absolute;
     top: 141px;
     left: 190px;
     display:none;
 }
-#map iframe{
+#map iframe {
     border:1px solid black;
 }
-.button{
+.button {
     padding:13px 40px;
     background-color:#00caa7;
     color:#00caa7;
@@ -65,10 +66,10 @@ html{
     margin:0 auto;
     margin-top:20px;
 }
-.button:hover{
+.button:hover {
     background-color:#00b495
 }
-#results{
+#results {
     color: rgb(0, 180, 149);
     position: absolute;
     margin-top: 20px;
