--- a/CafeteriaApp/CafeteriaApp.Frontend/css/layout.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/layout.css
@@ -345,3 +345,17 @@ a.dropdown_item:hover {
 #notify-btn:hover {
     transform: rotate(15deg) scale(1.3);
 }
+
+/* firefox */
+@-moz-document url-prefix() {
+    #Eng {
+        margin-left: 28px
+    }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    /* IE10+ CSS styles go here */
+    #Eng {
+        margin-left: 28px
+    }
+}
